# slac

./: .env  .gitignore  Cargo.toml  README.md
docs/: add_avatar_to_users.md  chat.html  create_db.MD  gen_jwt_token.md
migrations/: 20250408135615_initial.sql  20250414001737_add_avatar_to_users.sql
src/: errors.rs  lib.rs  main.rs  router.rs  state.rs  test.rest
src/auth/: mod.rs
src/dto/: channel.rs  message.rs  mod.rs  user.rs
src/handlers/: channel_handler.rs  message_handler.rs  mod.rs  user.rs  user_handler.rs  websocket.rs
src/models/: channel.rs  message.rs  mod.rs  user.rs
src/service/: channel.rs  message.rs  user.rs
